--- a/Mobile/FoodPlanner.Mobile.App/FoodPlanner.Mobile.App.Android/TAMPLATE.Mobile.App.Android.csproj
+++ b/Mobile/FoodPlanner.Mobile.App/FoodPlanner.Mobile.App.Android/TAMPLATE.Mobile.App.Android.csproj
@@ -91,9 +91,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FoodPlanner.Mobile.App\FoodPlanner.Mobile.App.csproj">
-      <Project>{281E4EC3-3205-45A4-8447-467AE2BC09FE}</Project>
-      <Name>FoodPlanner.Mobile.App</Name>
+    <ProjectReference Include="..\FoodPlanner.Mobile.App\TAMPLATE.Mobile.App.csproj">
+      <Project>{BBD13A3B-09D2-4106-B755-E847FEC335CF}</Project>
+      <Name>TAMPLATE.Mobile.App</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
