As Stenciljs is dropping the stylus support, I have updated the project to use tailwindcss instead, it seems like a good way to go when it comes it css.. still missing the components to drop there stylus files

--- a/Web/TemplateProject.web.site/package.json
+++ b/Web/TemplateProject.web.site/package.json
@@ -23,13 +23,13 @@
         "create:ts:component": "cd ./frontend/scripts/src && hygen ts component",
         "static": "stencil build --dev --watch --static",
         "static:storybook": "concurrently --names \"STORYBOOK,STATIC,STYLING\" --prefix-colors \"yellow.bgMagenta.bold,cyan.bgBlue.bold,red.bgRed.bold\" \"npm run storybook\" \"npm run static\" \"npm run static:styling\"",
-        "static:styling": "stylus --watch ./Frontend/styling/app.styl --out Frontend/storybook/dist/css/ ",
+        "static:styling": "npx tailwindcss -i ./Frontend/styling/app.css -o ./Frontend/storybook/dist/css/app.css --watch ",
         "build": "npm run install-ci && npm run build:stencil && npm run build:styling",
         "build:stencil": "stencil build --prod",
-        "build:styling": "stylus --compress ./Frontend/styling/app.styl --out wwwroot/css/",
+        "build:styling": "npx tailwindcss -i ./Frontend/styling/app.css -o ./wwwroot/css/app.css",
         "start": "concurrently --names \"STENCIL,STYLING\" --prefix-colors \"cyan.bgBlue.bold,red.bgRed.bold\" \"stencil build --dev --watch\" \"npm run start:styling\"",
         "start:stencil": "stencil build --dev --watch",
-        "start:styling": "stylus --watch ./Frontend/styling/app.styl --out wwwroot/css/",
+        "start:styling": "npx tailwindcss -i ./Frontend/styling/app.css -o ./wwwroot/css/app.css --watch",
         "pretest": "tsc --project tsconfig.tests.json",
         "test": "npm run test:frontend && npm run test:stencil",
         "test:stencil": "stencil test --roots=\"Frontend/scripts/src/components\" --spec --e2e --ci --reporters='default' --reporters='jest-junit' --detectOpenHandles",
@@ -39,20 +39,20 @@
         "storybook": "start-storybook --port 1338 --config-dir ./Frontend/storybook/config/dev --static-dir ./Frontend/storybook/dist --quiet"
     },
     "devDependencies": {
-        "@stencil/core": "^2.17.0",
+        "@stencil/core": "^2.18.1",
         "@stencil/eslint-plugin": "^0.4.0",
-        "@stencil/store": "^2.0.0",
+        "@stencil/store": "^2.0.1",
         "@stencil/stylus": "^1.0.1",
-        "@storybook/addon-a11y": "^6.5.9",
-        "@storybook/addon-actions": "^6.5.9",
-        "@storybook/addon-docs": "6.5.9",
-        "@storybook/addon-essentials": "^6.5.9",
-        "@storybook/addon-links": "^6.5.9",
-        "@storybook/addon-viewport": "^6.5.9",
-        "@storybook/addons": "^6.5.9",
-        "@storybook/core": "^6.5.9",
-        "@storybook/theming": "^6.5.9",
-        "@storybook/web-components": "^6.5.9",
+        "@storybook/addon-a11y": "^6.5.12",
+        "@storybook/addon-actions": "^6.5.12",
+        "@storybook/addon-docs": "^6.5.12",
+        "@storybook/addon-essentials": "^6.5.12",
+        "@storybook/addon-links": "^6.5.12",
+        "@storybook/addon-viewport": "^6.5.12",
+        "@storybook/addons": "^6.5.12",
+        "@storybook/core": "^6.5.12",
+        "@storybook/theming": "^6.5.12",
+        "@storybook/web-components": "^6.5.12",
         "@types/jest": "26.0.22",
         "@types/puppeteer": "5.4.4",
         "@typescript-eslint/eslint-plugin": "^5.30.3",
@@ -62,7 +62,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-react": "^7.30.1",
         "eslint-webpack-plugin": "^3.2.0",
-        "hygen": "^6.2.7",
+        "hygen": "^6.2.11",
         "jest": "^28.1.2",
         "jest-cli": "^28.1.2",
         "jest-junit": "^14.0.0",
@@ -71,7 +71,7 @@
         "miragejs": "^0.1.45",
         "prettier": "2.7.1",
         "puppeteer": "^15.3.0",
-        "stylus": "^0.58.1",
+        "tailwindcss": "^3.1.8",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
         "workbox-build": "6.5.3"
